[package]
name = "state"
version = "0.4.1"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
A library for safe and effortless global and thread-local state management.
"""
documentation = "https://docs.rs/state/0.4.1"
repository = "https://github.com/SergioBenitez/state"
readme = "README.md"
keywords = ["static", "tls", "state", "thread-local", "global"]
license = "MIT/Apache-2.0"

[features]
tls = ["lazy_static"]
const_fn = [] # here for backwards compatibility in 0.4.x only

[dependencies]
lazy_static = { version = "*", optional = true }

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true

[package.metadata.docs.rs]
all-features = true
