[package]
name = "state"
version = "0.6.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
A library for safe and effortless global and thread-local state management.
"""
documentation = "https://docs.rs/state/0.6.0"
repository = "https://github.com/SergioBenitez/state"
readme = "README.md"
keywords = ["static", "tls", "state", "thread-local", "global"]
license = "MIT/Apache-2.0"
edition = "2021"

[features]
tls = []

[dependencies]

[dev-dependencies]
static_assertions = "1.1.0"

[target.'cfg(loom)'.dependencies]
loom = { version = "0.5", features = ["checkpoint"] }

[profile.release]
opt-level = 3
lto = true

[profile.bench]
opt-level = 3
lto = true

[package.metadata.docs.rs]
all-features = true
